Some image fixes on mobile.

--- a/wp-content/themes/saarbakt-2019/resources/source/styles/src/pages/_single-post.scss
+++ b/wp-content/themes/saarbakt-2019/resources/source/styles/src/pages/_single-post.scss
@@ -14,10 +14,29 @@
 		}
 	}
 
+	.sb-breadcrumbs {
+		border-bottom: 1px solid $color3;
+		padding-bottom:2rem;
+	}
+
+	.sb-container.sb-two-col {
+		margin-top: 3rem;
+	}
+
 	.sb-post-content {
 		padding: 1.5rem;
-		border: 1px solid lighten($color1, 40%);
 		border-radius: 1rem;
+		position: relative;
+
+		&:before {
+			content: '';
+			width: 1px;
+			height: 100%;
+			background-color: $color3;
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
 
 		p {
 			font-size: 1.6rem;
@@ -32,7 +51,6 @@
 
 	.sb-ingredients {
 		padding: 1.5rem;
-		border: 1px solid lighten($color1, 40%);
 		border-radius: 1rem;
 
 		ul {
@@ -66,7 +84,28 @@
 /* Tablet Styles (up to 768px)
 /*_______________________________________________________*/
 @media screen and (max-width: 768px) {
+	.single-post {
+		.sb-post-content {
+			@include flex(100%);
+			border-bottom: 1px solid $color3;
+			border-radius: 0;
 
+			&:before {
+				display: none;
+			}
+
+			img {
+				width: 100%;
+				margin-left: 0;
+				margin-right: 0;
+				margin-bottom: 5px;
+			}
+		}
+
+		.sb-ingredients {
+			@include flex(100%);
+		}
+	}
 }
 
 /*
